reorganize and clenaup notebooks folder

--- a/notebooks/preprocessing/mark_bads_channels_in_bids.ipynb
+++ b/notebooks/preprocessing/mark_bads_channels_in_bids.ipynb
@@ -2,35 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# this script marks already detected bad channels in the bids files\n",
     "# imports\n",
     "import numpy as np\n",
-    "import mne\n",
     "import os.path as op\n",
     "import pandas as pd\n",
     "from mne_bids import BIDSPath, read_raw_bids, mark_bad_channels\n",
     "import ast\n",
     "\n",
     "# directories\n",
-    "study_name = 'Main-study'\n",
-    "data_dir = '/Users/yeganeh/Documents/Raw Files/PLB_HYP_OTKA/Live Sessions'\n",
-    "bids_root = f'/Users/yeganeh/Codes/otka-preprocessing/data/{study_name}'\n",
-    "docs_dir = '/Users/yeganeh/Codes/otka-preprocessing/'"
+    "data_dir = 'data/Live Sessions'\n",
+    "bids_root = 'data/BIDS_data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creat bids path for the exsiting files\n",
     "bids_list = []\n",
-    "subjects = ['01','02','03','22']\n",
+    "subjects = [f\"{num:02d}\" for num in range(1,51)]\n",
     "descriptions = ['baseline1', 'baseline2',\n",
     "'experience1', 'experience2', 'experience3', 'experience4',\n",
     "'induction1', 'induction2', 'induction3', 'induction4']\n",
@@ -52,10 +49,10 @@
    "source": [
     "# mark bad channels\n",
     "# read ids map that contains the list of bad channels\n",
-    "ids_map = pd.read_excel(f'{docs_dir}/ids_map.xlsx', header=1)\n",
+    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1)\n",
     "bad_channels = ids_map[['bids_id','bad_channels']]\n",
     "bad_channels.set_index('bids_id', inplace=True)\n",
-    "bad_channels = bad_channels.loc[26:46]\n",
+    "bad_channels = bad_channels.loc[:46]\n",
     "\n",
     "# get the bids path corresponding to each participants and mark bad channels for them based on their original ids\n",
     "value = -1\n",
@@ -63,9 +60,9 @@
     "    value = value + 1\n",
     "    temp_list = bids_list[value*10 : (value+1)*10]\n",
     "    bads = bad_channels.loc[ind][0]\n",
-    "    if bads != '[]':\n",
-    "        for bids_path in temp_list:\n",
-    "            mark_bad_channels(ch_names=ast.literal_eval(bads), bids_path=bids_path, verbose=False, overwrite=True)\n",
+    "    # if bads != '[]':\n",
+    "    for bids_path in temp_list:\n",
+    "        mark_bad_channels(ch_names=ast.literal_eval(bads), bids_path=bids_path, verbose=False, overwrite=True)\n",
     "\n",
     "# raw = read_raw_bids(bids_path=bids_path, verbose=False)"
    ]
