--- a/notebooks/preprocessing/timestamps_check.ipynb
+++ b/notebooks/preprocessing/timestamps_check.ipynb
@@ -19,21 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs_dir = '/Users/yeganeh/Codes/otka-preprocessing/docs'\n",
-    "eeg_dir = '/Users/yeganeh/Documents/Raw Files/PLB_HYP_OTKA/Live Sessions'\n",
+    "# Behavioral data\n",
+    "bh_data = pd.read_excel('data/PLB_HYP_data_MASTER.xlsx', index_col=0)\n",
+    "triggers = [c for c in bh_data.columns if 'timestamp' in c]\n",
+    "bh_time = bh_data[triggers]\n",
     "\n",
-    "# open behavioral data\n",
-    "bhdata = pd.read_excel(f'{docs_dir}/data_with_hypnotizability.xlsx', header=1)\n",
-    "bhdata.set_index('index', inplace=True)\n",
-    "triggers = [c for c in bhdata.columns if 'timestamp' in c]\n",
-    "bh_time = bhdata[triggers]\n",
-    "\n",
-    "# open ids map between eeg and behavioral data\n",
-    "ids_map = pd.read_excel(f'{docs_dir}/eeg_behavioral_bids_idsmap.xlsx', header=1)"
+    "# IDs map between eeg and behavioral data\n",
+    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1)"
    ]
   },
   {
@@ -59,6 +55,7 @@
     }
    ],
    "source": [
+    "eeg_dir = 'data/raw_test'\n",
     "ids_map_intact = ids_map\n",
     "bh_id = ids_map_intact['behavioral_id']\n",
     "eeg_id = ids_map_intact['eeg_id']\n",
@@ -895,10 +892,11 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "d539ee110e3d7f72862ae1acc5ad197a6467511f7b01c5e88c321aa8b0a828d7"
+   "hash": "a5940ee23a8ed7b2e3c21178d81a306e47a8b6a3c2b3d99c2f75b67b005e8c5b"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.1 64-bit ('base': conda)",
+   "display_name": "Python 3.9.12 ('otka')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -911,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
