Refactor pipeline as a transformer class.

--- a/notebooks/1 Classification.ipynb
+++ b/notebooks/1 Classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import FunctionTransformer, StandardScaler\n",
     "from sklearn.svm import LinearSVC, SVC\n",
-    "from src.sugnet.pipeline import extract_features\n",
+    "from src.sugnet.pipeline import FeatureExtractor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "from sklearn.decomposition import PCA, FastICA\n",
     "from sklearn.manifold import TSNE\n"
@@ -36,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CV = GroupShuffleSplit(n_splits=1, test_size=0.2)\n",
+    "CV = GroupShuffleSplit(n_splits=3, test_size=0.2)\n",
     "CHANCE_CV = GroupShuffleSplit(n_splits=100, test_size=0.2)\n",
     "n_permutations = 100\n",
     "output_path = Path('data/classification_output')"
@@ -71,22 +72,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5333333333333333,\n",
+       " 0.023570226039551605,\n",
+       " BootstrapResult(confidence_interval=ConfidenceInterval(low=0.5, high=0.5333333333333333), standard_error=0.01340064250602664))"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. PIPELINE\n",
     "pipe = Pipeline([\n",
-    "    ('extract', FunctionTransformer(extract_features,\n",
-    "                                    kw_args={'kind': 'correlation source',\n",
-    "                                             'frequency_band': 'beta'},\n",
-    "                                   #TODO validate=True\n",
-    "                                    )),\n",
+    "    ('extract', FeatureExtractor()),\n",
     "    ('zerovar', VarianceThreshold(threshold=0.0)),\n",
     "    ('scale', StandardScaler()),\n",
     "    # ('pca', PCA(n_components=30)),\n",
-    "    # ('select', SelectFromModel(LinearSVC(penalty='l2', max_iter=100000, dual=False,))),\n",
-    "    # ('clf', LinearSVC(penalty='l2', max_iter=100000, dual=False)),\n",
     "    ('select', SelectFromModel(SVC(kernel=\"linear\", max_iter=100000), max_features=13)),\n",
     "    ('clf', SVC(kernel=\"linear\", max_iter=100000, probability=True)),\n",
     "])\n",
@@ -99,39 +107,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 21 candidates, totalling 63 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=GroupShuffleSplit(n_splits=3, random_state=None, test_size=0.2,\n",
+       "         train_size=None),\n",
+       "             estimator=Pipeline(steps=[('extract', FeatureExtractor()),\n",
+       "                                       ('zerovar', VarianceThreshold()),\n",
+       "                                       ('scale', StandardScaler()),\n",
+       "                                       ('select',\n",
+       "                                        SelectFromModel(estimator=SVC(kernel='linear',\n",
+       "                                                                      max_iter=100000),\n",
+       "                                                        max_features=13)),\n",
+       "                                       ('clf',\n",
+       "                                        SVC(kernel='linear', max_iter=100000,\n",
+       "                                            probability=True))]),\n",
+       "             param_grid=[{'extract__frequency_band': ['theta', 'alpha', 'beta',\n",
+       "                                                      'gamma', 'all'],\n",
+       "                          'extract__kind': ['correlation source',\n",
+       "                                            'power source', 'power sensor',\n",
+       "                                            'plv source']},\n",
+       "                         {'extract__kind': ['correlation sensor']}],\n",
+       "             scoring='accuracy', verbose=1)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "grid_params = {\n",
-    "    'extract__kw_args': [\n",
-    "        dict(kind='correlation source', frequency_band='alpha'),\n",
-    "        dict(kind='correlation source', frequency_band='theta'),\n",
-    "        dict(kind='correlation source', frequency_band='beta'),\n",
-    "        dict(kind='correlation source', frequency_band='gamma'),\n",
-    "        \n",
-    "        dict(kind='power sensor', frequency_band='alpha'),\n",
-    "        dict(kind='power sensor', frequency_band='theta'),\n",
-    "        dict(kind='power sensor', frequency_band='beta'),\n",
-    "        dict(kind='power sensor', frequency_band='gamma'),\n",
-    "        \n",
-    "        dict(kind='power source', frequency_band='alpha'),\n",
-    "        dict(kind='power source', frequency_band='theta'),\n",
-    "        dict(kind='power source', frequency_band='beta'),\n",
-    "        dict(kind='power source', frequency_band='gamma'),\n",
-    "        # dict(kind='power source', power_type='nonperiodic'),\n",
-    "        # dict(kind='power source', power_type='iaf'),\n",
-    "        \n",
-    "        dict(kind='plv source', frequency_band='alpha'),\n",
-    "        dict(kind='plv source', frequency_band='theta'),\n",
-    "        dict(kind='plv source', frequency_band='beta'),\n",
-    "        dict(kind='plv source', frequency_band='gamma'),\n",
-    "        \n",
-    "        dict(kind='correlation sensor'),\n",
-    "    ]\n",
-    "}\n",
-    "\n",
-    "from sklearn.model_selection import GridSearchCV\n",
+    "grid_params = [{\n",
+    "    'extract__kind': ['correlation source', 'power source', 'power sensor', 'plv source'],\n",
+    "    'extract__frequency_band': ['theta', 'alpha', 'beta', 'gamma', 'all'],\n",
+    "    \n",
+    "}, {\n",
+    "    'extract__kind': ['correlation sensor'],\n",
+    "}]\n",
     "\n",
     "grid = GridSearchCV(pipe, grid_params, cv=CV, scoring='accuracy', verbose=1)\n",
     "grid.fit(X, y, groups=groups)\n"
