--- a/notebooks/archived/4 Classification Playground.ipynb
+++ b/notebooks/archived/4 Classification Playground.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "import scipy\n",
     "import sklearn\n",
     "import skopt\n",
-    "from sklearn.decomposition import PCA\n",
+    "from sklearn.decomposition import PCA, FastICA\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.feature_selection import (SelectFromModel, SelectKBest,\n",
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data\n",
-    "DATA = pd.read_csv('data/classification_datasets/correlation_sensor.csv', index_col=0)\n",
+    "DATA = pd.read_csv('data/classification_datasets/correlation_source.csv', index_col=0)\n",
     "\n",
     "DATA = DATA.query('description == \"hypnosis\"')\n",
     "DATA = DATA.query('condition.str.contains(\"experience\")')\n",
@@ -89,6 +89,97 @@
     "X = X[col_name]\n",
     "\n",
     "y = DATA['hypnosis_depth'].apply(lambda x: 0 if x <= 5 else 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:16<00:00,  1.66s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6082339940760992"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# svm classifier\n",
+    "NUM_TRIALS = 10\n",
+    "groups = DATA['bids_id']\n",
+    "\n",
+    "pipe = Pipeline([\n",
+    "    ('zerovar', VarianceThreshold(threshold=0.0)),\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('reduce', PCA()),\n",
+    "    # ('clf', SVC(kernel=\"poly\", \n",
+    "    #             # C=12.032891834179356,\n",
+    "    #             # gamma=22.25679198157808,\n",
+    "    #             max_iter=-1,\n",
+    "    #             probability=True,\n",
+    "    #             class_weight='balanced')),\n",
+    "     ('clf', RandomForestClassifier(n_estimators=400)),\n",
+    "])\n",
+    "\n",
+    "# stratified split\n",
+    "CV = StratifiedGroupKFold(n_splits=5, shuffle=True)\n",
+    "scores = []\n",
+    "for i in tqdm(range(NUM_TRIALS)):\n",
+    "    score = cross_val_score(pipe, X, y, cv=CV, groups=groups, scoring='accuracy')\n",
+    "    scores.append(score)\n",
+    "np.array(scores).mean()\n",
+    "\n",
+    "# shuffled split\n",
+    "# CV =GroupShuffleSplit(n_splits=100, test_size=0.2)\n",
+    "# score = cross_val_score(pipe, X, y, cv=CV, groups=groups, scoring='accuracy')\n",
+    "# score.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'clf__n_estimators': 400, 'reduce__n_components': 0.99}, 0.6571694971694972)"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = {\n",
+    "    'reduce__n_components': [None, 2, 5, 10, 0.95, 0.99, 0.8],\n",
+    "    'clf__n_estimators': [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000],\n",
+    "}\n",
+    "\n",
+    "clf = GridSearchCV(pipe, params, cv=CV, n_jobs=-1, scoring='balanced_accuracy', error_score=0)\n",
+    "clf.fit(X, y, groups=groups)\n",
+    "clf.best_params_, clf.best_score_\n",
+    "# y_pred = clf.predict(X.iloc[test])\n",
+    "# test_accuraies.append((y.iloc[test] == y_pred).mean())"
    ]
   },
   {
