--- a/notebooks/archived/4 Classification Playground.ipynb
+++ b/notebooks/archived/4 Classification Playground.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data\n",
-    "DATA = pd.read_csv('data/classification_datasets/correlation_source.csv', index_col=0)\n",
+    "DATA = pd.read_csv('data/classification_datasets/power_sensor.csv', index_col=0)\n",
     "\n",
     "DATA = DATA.query('description == \"hypnosis\"')\n",
     "DATA = DATA.query('condition.str.contains(\"experience\")')\n",
@@ -85,7 +85,7 @@
     "X = DATA.drop(columns=['hypnosis_depth', 'procedure', 'description', 'session', 'condition',\n",
     "                       'bids_id'])\n",
     "\n",
-    "col_name = [col for col in X.columns if 'beta' in col]\n",
+    "col_name = [col for col in X.columns if 'gamma' in col and 'Z' not in col]\n",
     "X = X[col_name]\n",
     "\n",
     "y = DATA['hypnosis_depth'].apply(lambda x: 0 if x <= 5 else 1)"
@@ -605,6 +605,68 @@
     "    arr = df.groupby('hypnosis_depth').agg({'correct': 'mean'}).values\n",
     "    arrs.append(arr)\n",
     "np.array(arrs).mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVC (not nested CV)\n",
+    "Investigate how different types of features affect the SVC model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Pipeline\n",
+    "pipe = Pipeline([\n",
+    "    ('zerovar', VarianceThreshold(threshold=0.0)),\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('select', SelectFromModel(estimator=SVC(kernel='linear', probability=True))),\n",
+    "    ('clf', LinearSVC())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Model Performance \n",
+      " With : 0.6408441558441558, \n",
+      " and without power of central sensors 0.6044805194805195\n"
+     ]
+    }
+   ],
+   "source": [
+    "# open grid results and GET the BEST parameters\n",
+    "model_name = 'gamma power sensor'\n",
+    "grid_results = pd.read_csv('data/classification_results/grid_results.csv', index_col=0)\n",
+    "grid_results['label'] = grid_results['param_extract__frequency_band'] + ' ' + grid_results['param_extract__kind']\n",
+    "idx = grid_results.groupby('label')['mean_test_score'].transform(max) == grid_results['mean_test_score']\n",
+    "grid_results = grid_results[idx]\n",
+    "grid_results.drop_duplicates(subset='label', inplace=True)\n",
+    "import ast\n",
+    "params = grid_results.query('label == @model_name')['params'].iloc[0]\n",
+    "keys = ['clf__C', 'select']\n",
+    "params = {k:v for k,v in ast.literal_eval(params).items() if k in keys}\n",
+    "pipe.set_params(**params)\n",
+    "\n",
+    "model_performance = grid_results.query('label == @model_name')['mean_test_score'].iloc[0]\n",
+    "\n",
+    "# scores with and without power of central sensors\n",
+    "CV = GroupShuffleSplit(n_splits=100, test_size=0.2)\n",
+    "groups = DATA['bids_id']\n",
+    "\n",
+    "scores = cross_val_score(pipe, X, y, groups=groups, cv=CV, n_jobs=-1)\n",
+    "print(f' Model Performance \\n With : {model_performance}, \\n and without power of central sensors {scores.mean()}')\n"
    ]
   },
   {
