Calculate shap and feature importance using stratified group CV.

--- a/notebooks/1 Classification.ipynb
+++ b/notebooks/1 Classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "CV = GroupShuffleSplit(n_splits=200, test_size=0.2)\n",
     "CHANCE_CV = GroupShuffleSplit(n_splits=200, test_size=0.2)\n",
-    "n_permutations = 100\n",
+    "n_permutations = 40\n",
     "output_path = Path('data/classification_output')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,52 +245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a789868c74e4531bbf6ae9b3c30d76b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "correlation source (beta):   0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9de931454d047ae9f571b0ac66a9ed5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "power sensor (gamma):   0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3f6ab8c355a446196da24d1fdb74c61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "plv source (gamma):   0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.inspection import permutation_importance\n",
     "from collections import defaultdict\n",
@@ -298,12 +255,65 @@
     "import ast\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "\n",
+    "CV_EXPLAIN = StratifiedGroupKFold(n_splits=5)\n",
+    "n_iterations = 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dbfe1effc0ac46f3892d1c3197fffe10",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "correlation source (beta):   0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8944ae5351bb4e32a740bf78994c3a7b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "power sensor (gamma):   0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "866cbdc25a2547dfa1f3c0206aa1347f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "plv source (gamma):   0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "model_names = grid_results.groupby('label')['mean_test_score'].mean().sort_values(ascending=False).index.values\n",
     "importances = {}\n",
     "shap_values = {}\n",
     "y_tests = {}\n",
     "y_preds = {}\n",
+    "expected_values = []\n",
     "\n",
     "\n",
     "for model_name in model_names[:3]:\n",
@@ -319,22 +329,24 @@
     "    y_test_cv = []\n",
     "    y_pred_cv = []\n",
     "\n",
-    "    for train, test in tqdm(CV.split(X, y, groups=groups), desc=model_name, total=CV.get_n_splits()):\n",
+    "    for iter in tqdm(range(n_iterations), desc=model_name):\n",
+    "        for train, test in CV_EXPLAIN.split(X, y, groups=groups):\n",
     "\n",
-    "        model = pipe[-2:].fit(X_t[train], y[train])\n",
-    "        y_pred = model.predict(X_t[test])\n",
-    "        \n",
-    "        test_indices.extend(test)\n",
-    "        y_test_cv.append(y[test])\n",
-    "        y_pred_cv.append(y_pred)\n",
-    "        \n",
-    "        explainer = shap.Explainer(model.predict, X_t[train], feature_names=feature_names)\n",
-    "        cv_shap_values = explainer(X_t[test], max_evals=len(feature_names)*2+1)\n",
-    "        model_shapes.append(cv_shap_values)\n",
+    "            model = pipe[-2:].fit(X_t[train], y[train])\n",
+    "            y_pred = model.predict(X_t[test])\n",
+    "            \n",
+    "            test_indices.extend(test)\n",
+    "            y_test_cv.append(y[test])\n",
+    "            y_pred_cv.append(y_pred)\n",
+    "            \n",
+    "            explainer = shap.Explainer(model.predict, X_t[train], feature_names=feature_names)\n",
+    "            cv_shap_values = explainer(X_t[test], max_evals=len(feature_names)*2+1)\n",
+    "            model_shapes.append(cv_shap_values)\n",
+    "            \n",
     "\n",
-    "        perm_scores = permutation_importance(model, X_t[test], y[test], n_repeats=30, n_jobs=-1)\n",
-    "        cv_importances = pd.DataFrame(perm_scores['importances'].T, columns=feature_names)\n",
-    "        model_importances.append(cv_importances)\n",
+    "            perm_scores = permutation_importance(model, X_t[test], y[test], n_repeats=30, n_jobs=-1)\n",
+    "            cv_importances = pd.DataFrame(perm_scores['importances'].T, columns=feature_names)\n",
+    "            model_importances.append(cv_importances)\n",
     "    \n",
     "    importances[model_name] = pd.concat(model_importances)\n",
     "    \n",
@@ -353,20 +365,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save importances and shap values as pickle files\n",
     "import pickle\n",
-    "with open('data/classification_results/importances.pkl', 'wb') as f:\n",
+    "with open('data/classification_results/importances_stratifiedCV.pkl', 'wb') as f:\n",
     "    pickle.dump(importances, f)\n",
     "    \n",
     "y_preds_ = {f'y_pred-{k}':v for k,v in y_preds.items()}\n",
     "y_tests_ = {f'y_test-{k}':v for k,v in y_tests.items()}\n",
     "\n",
     "new_dict = shap_values | y_preds_ | y_tests_\n",
-    "with open('data/classification_results/shap_values.pkl', 'wb') as f:\n",
+    "with open('data/classification_results/shap_values_stratifiedCV.pkl', 'wb') as f:\n",
     "    pickle.dump(new_dict, f)"
    ]
   }
