Explain why each feature contributes more to misclassification than classification.

--- a/notebooks/2 Visualization.ipynb
+++ b/notebooks/2 Visualization.ipynb
@@ -224,6 +224,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is there a reason why each feature contributes more to misclassification than classification?\n",
+    "Two reasons may explain this:\n",
+    "1. The task (being in the resting state) did not create a contrast between two groups; iin other words, each feature lacks the distinctive power.\n",
+    "2. There are many features that create hypnotic experiences, so when the model learns an increase in one feature will indicate a participant belongs to a particular group, it doesn't always happen.\n",
+    "3. The relationship between that feature and the target value may not be linear."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
