--- a/notebooks/1 Classification.ipynb
+++ b/notebooks/1 Classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,19 +255,19 @@
     "import ast\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "CV_EXPLAIN = StratifiedGroupKFold(n_splits=5)\n",
+    "CV_EXPLAIN = StratifiedGroupKFold(n_splits=5, shuffle=True)\n",
     "n_iterations = 40"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbfe1effc0ac46f3892d1c3197fffe10",
+       "model_id": "f6615aa199124e81abda7da4ce679512",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8944ae5351bb4e32a740bf78994c3a7b",
+       "model_id": "fd22c4c4e3ca4a1894c87c77f0a9866a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "866cbdc25a2547dfa1f3c0206aa1347f",
+       "model_id": "c1987b8ac557456baa952e3e7e435d4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,20 +365,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save importances and shap values as pickle files\n",
     "import pickle\n",
-    "with open('data/classification_results/importances_stratifiedCV.pkl', 'wb') as f:\n",
+    "with open('data/classification_results/importances_stratifiedCV_shuffled.pkl', 'wb') as f:\n",
     "    pickle.dump(importances, f)\n",
     "    \n",
     "y_preds_ = {f'y_pred-{k}':v for k,v in y_preds.items()}\n",
     "y_tests_ = {f'y_test-{k}':v for k,v in y_tests.items()}\n",
     "\n",
     "new_dict = shap_values | y_preds_ | y_tests_\n",
-    "with open('data/classification_results/shap_values_stratifiedCV.pkl', 'wb') as f:\n",
+    "with open('data/classification_results/shap_values_stratifiedCV_shuffled.pkl', 'wb') as f:\n",
     "    pickle.dump(new_dict, f)"
    ]
   }
