collect and save test indices.

--- a/notebooks/1 Classification.ipynb
+++ b/notebooks/1 Classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,13 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6615aa199124e81abda7da4ce679512",
+       "model_id": "fad636e299744b7eb5a8975b4336bd0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd22c4c4e3ca4a1894c87c77f0a9866a",
+       "model_id": "d3c67de1f95e4deab0cba9e3b12eb2aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1987b8ac557456baa952e3e7e435d4f",
+       "model_id": "6cf9c935f68148bf97a6c86ae0c5e7bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +313,7 @@
     "shap_values = {}\n",
     "y_tests = {}\n",
     "y_preds = {}\n",
-    "expected_values = []\n",
+    "test_indices = {}\n",
     "\n",
     "\n",
     "for model_name in model_names[:3]:\n",
@@ -325,7 +325,7 @@
     "    feature_names = pipe[:-2].get_feature_names_out()\n",
     "    model_importances = []\n",
     "    model_shapes = []\n",
-    "    test_indices = []\n",
+    "    _test_indices = []\n",
     "    y_test_cv = []\n",
     "    y_pred_cv = []\n",
     "\n",
@@ -335,7 +335,7 @@
     "            model = pipe[-2:].fit(X_t[train], y[train])\n",
     "            y_pred = model.predict(X_t[test])\n",
     "            \n",
-    "            test_indices.extend(test)\n",
+    "            _test_indices.extend(test)\n",
     "            y_test_cv.append(y[test])\n",
     "            y_pred_cv.append(y_pred)\n",
     "            \n",
@@ -352,6 +352,7 @@
     "    \n",
     "    y_tests[model_name] = np.hstack(y_test_cv)\n",
     "    y_preds[model_name] = np.hstack(y_pred_cv)\n",
+    "    test_indices[model_name] = np.array(_test_indices)\n",
     "    \n",
     "    shap_values[model_name] = shap.Explanation(\n",
     "        values=np.vstack([sh.values for sh in model_shapes]),\n",
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,8 +377,9 @@
     "    \n",
     "y_preds_ = {f'y_pred-{k}':v for k,v in y_preds.items()}\n",
     "y_tests_ = {f'y_test-{k}':v for k,v in y_tests.items()}\n",
+    "test_indices_ = {f'test_indices-{k}':v for k,v in test_indices.items()}\n",
     "\n",
-    "new_dict = shap_values | y_preds_ | y_tests_\n",
+    "new_dict = shap_values | y_preds_ | y_tests_ | test_indices_\n",
     "with open('data/classification_results/shap_values_stratifiedCV_shuffled.pkl', 'wb') as f:\n",
     "    pickle.dump(new_dict, f)"
    ]
