Examine how decimation affects computation speed and aggregated results.

--- a/notebooks/preprocessing/3.3 Phase Synchrony.ipynb
+++ b/notebooks/preprocessing/3.3 Phase Synchrony.ipynb
@@ -17,14 +17,17 @@
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import mne\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import xarray as xr\n",
-    "from IPython.display import clear_output\n",
     "from frites.conn import conn_spec\n",
     "from frites.conn.conn_tf import _create_kernel\n",
-    "from scipy.signal import fftconvolve, hilbert"
+    "from IPython.display import clear_output\n",
+    "from mne_connectivity import spectral_connectivity_time\n",
+    "from neurodsp.rhythm import compute_lagged_coherence\n",
+    "from scipy.signal import fftconvolve, hilbert\n"
    ]
   },
   {
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +48,7 @@
        "(0.9090707847923393, 0.9999687706612362)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,6 +605,171 @@
     "conn_df_total = conn_df_total.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
     "conn_df_total.insert(1, 'condition', conn_df_total.pop('condition'))\n",
     "conn_df_total.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Phase Synchrony at Sensor Level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[1;33mWARNING\u001b[0m | No time vector. A default one is created\n",
+      "Defining links (n_roi=57; directed=False; net=False, nb_min_links=None)\n",
+      "    Sorting roi names\n",
+      "Computing pairwise Phase-Locking Value (n_pairs=1596, n_freqs=41, decim=10, sm_times=512, sm_freqs=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is now processing baseline1 for sub-02...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "47cf1f6c4a3743e38cf9c7c0dac99a32",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | Estimating pairwise Phase-Locking Value for trials 0...0 : 0/1596 [00:00<?,       ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "foi = np.array([\n",
+    "        [1, 4],\n",
+    "        [4, 8],\n",
+    "        [8, 13],\n",
+    "        [13, 30],\n",
+    "        [30, 42]\n",
+    "        ])\n",
+    "\n",
+    "freqs = np.arange(1, 42, 1)\n",
+    "\n",
+    "sfreq = 512\n",
+    "\n",
+    "def calculate_ps(file_path):\n",
+    "    \n",
+    "    # open eeg file and modify\n",
+    "    raw = mne.read_epochs(file_path)\n",
+    "    raw.pick_types(eeg=True) # pick eeg channels\n",
+    "    raw.drop_channels(['M1', 'M2']) # drop mastoids\n",
+    "    ch_names = raw.ch_names # channel names\n",
+    "    if sfreq <= 1000:\n",
+    "        raw.resample(sfreq) # resample to speed-up\n",
+    "    \n",
+    "    # create a continuous data array and add a new dimention (for conn_spec function)\n",
+    "    data = np.array([np.hstack(raw.get_data())])\n",
+    "    \n",
+    "    # print subject/task\n",
+    "    subject, task = re.search('(.*)_ses-01_task-(.*)_proc-clean_epo.*', file_path.stem).groups()\n",
+    "    print(f'It is now processing {task} for {subject}...')\n",
+    "    \n",
+    "    conn = conn_spec(data,\n",
+    "                    metric='plv',\n",
+    "                    freqs=freqs,\n",
+    "                    roi=ch_names,\n",
+    "                    sfreq=sfreq,\n",
+    "                    foi=foi,\n",
+    "                    sm_times=10,\n",
+    "                    sm_freqs=1,\n",
+    "                    n_cycles=5,\n",
+    "                    n_jobs=1,\n",
+    "                    decim=10, # to speedup\n",
+    "                    verbose=0\n",
+    "                    )\n",
+    "\n",
+    "    # save dataarray\n",
+    "    # output_path_plv = Path(f'data/connectivities/PLV/sensor/{subject}_task-{task}_conn-plv_sensor.nc')\n",
+    "    conn = conn.mean('times').mean('trials')\n",
+    "    # conn.to_netcdf(output_path_plv)\n",
+    "    \n",
+    "    return conn\n",
+    "    \n",
+    "\n",
+    "file_path = sorted(Path('data/clean_data').glob('*.fif'))[10]\n",
+    "conn_512_d10 = calculate_ps(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# open decimated data and compare\n",
+    "path1 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d1.nc')\n",
+    "path2 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d5.nc')\n",
+    "path3 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d10.nc')\n",
+    "path4 = Path(f'data/connectivities/PLV/sensor/tests/conn_1000_d5.nc')\n",
+    "path5 = Path(f'data/connectivities/PLV/sensor/tests/conn_1000_d10.nc')\n",
+    "\n",
+    "# 10 min\n",
+    "conn_512_d1 = xr.open_dataarray(path1).to_numpy()\n",
+    "\n",
+    "# 1.11.1 min\n",
+    "conn_512_d5 = xr.open_dataarray(path2).to_numpy()\n",
+    "\n",
+    "# 40.8 min\n",
+    "conn_512_d10 = xr.open_dataarray(path3).to_numpy()\n",
+    "\n",
+    "# 2:40 min\n",
+    "conn_1000_d5 = xr.open_dataarray(path4).to_numpy()\n",
+    "\n",
+    "# 1:17 min\n",
+    "conn_1000_d10 = xr.open_dataarray(path5).to_numpy()\n",
+    "\n",
+    "abs(np.round(conn_512_d1 - conn_512_d5, 3)).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from joblib import Parallel, delayed\n",
+    "from tqdm import tqdm\n",
+    "import time\n",
+    "\n",
+    "start_time = time.perf_counter()\n",
+    "\n",
+    "\n",
+    "file_paths = sorted(Path('data/clean_data').glob('*.fif'))[:4]\n",
+    "\n",
+    "conn = Parallel(n_jobs=2)(\n",
+    "    delayed(calculate_ps)(file_path) for file_path in file_paths\n",
+    ")\n",
+    "\n",
+    "finish = time.perf_counter()\n",
+    "print(f'Finished in {round(finish-start_time, 2)} seconds')"
    ]
   }
  ],
