Parallelize phase synchrony computation at the sensor level using joblib.

--- a/notebooks/preprocessing/3.3 Phase Synchrony.ipynb
+++ b/notebooks/preprocessing/3.3 Phase Synchrony.ipynb
@@ -616,42 +616,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[1;33mWARNING\u001b[0m | No time vector. A default one is created\n",
-      "Defining links (n_roi=57; directed=False; net=False, nb_min_links=None)\n",
-      "    Sorting roi names\n",
-      "Computing pairwise Phase-Locking Value (n_pairs=1596, n_freqs=41, decim=10, sm_times=512, sm_freqs=1)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It is now processing baseline1 for sub-02...\n"
+      "Reading /Users/yeganeh/Codes/otka_classification/data/clean_data/sub-02_ses-01_task-baseline1_proc-clean_epo.fif ...\n",
+      "    Found the data of interest:\n",
+      "        t =       0.00 ...     999.00 ms\n",
+      "        0 CTF compensation matrices available\n",
+      "0 bad epochs dropped\n",
+      "Not setting metadata\n",
+      "266 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47cf1f6c4a3743e38cf9c7c0dac99a32",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | Estimating pairwise Phase-Locking Value for trials 0...0 : 0/1596 [00:00<?,       ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
+    "# constants for conn_spec function\n",
     "foi = np.array([\n",
     "        [1, 4],\n",
     "        [4, 8],\n",
@@ -659,27 +644,37 @@
     "        [13, 30],\n",
     "        [30, 42]\n",
     "        ])\n",
-    "\n",
     "freqs = np.arange(1, 42, 1)\n",
-    "\n",
     "sfreq = 512\n",
+    "# ROI names\n",
+    "file_path = sorted(Path('data/clean_data').glob('*.fif'))[10]\n",
+    "epochs = mne.read_epochs(file_path)\n",
+    "epochs.pick_types(eeg=True) # pick eeg channels\n",
+    "epochs.drop_channels(['M1', 'M2']) # drop mastoids\n",
+    "ch_names = epochs.ch_names # channel names\n",
     "\n",
     "def calculate_ps(file_path):\n",
     "    \n",
     "    # open eeg file and modify\n",
-    "    raw = mne.read_epochs(file_path)\n",
-    "    raw.pick_types(eeg=True) # pick eeg channels\n",
-    "    raw.drop_channels(['M1', 'M2']) # drop mastoids\n",
-    "    ch_names = raw.ch_names # channel names\n",
-    "    if sfreq <= 1000:\n",
-    "        raw.resample(sfreq) # resample to speed-up\n",
+    "    epochs = mne.read_epochs(file_path)\n",
+    "    epochs.pick_types(eeg=True) # pick eeg channels\n",
+    "    epochs.drop_channels(['M1', 'M2']) # drop mastoids\n",
+    "    epochs.resample(sfreq) # resample to speed-up\n",
+    "    \n",
+    "    # set montage\n",
+    "    montage = mne.channels.make_standard_montage('standard_1020')\n",
+    "    epochs.set_montage(montage)\n",
+    "    print(epochs.info)\n",
+    "      \n",
+    "    # surface laplacian\n",
+    "    epochs_csd = mne.preprocessing.compute_current_source_density(epochs)\n",
     "    \n",
     "    # create a continuous data array and add a new dimention (for conn_spec function)\n",
-    "    data = np.array([np.hstack(raw.get_data())])\n",
+    "    data = np.array([np.hstack(epochs_csd.get_data())])\n",
     "    \n",
     "    # print subject/task\n",
     "    subject, task = re.search('(.*)_ses-01_task-(.*)_proc-clean_epo.*', file_path.stem).groups()\n",
-    "    print(f'It is now processing {task} for {subject}...')\n",
+    "    print(f'>>>>>>>> Processing {task} for {subject}...')\n",
     "    \n",
     "    conn = conn_spec(data,\n",
     "                    metric='plv',\n",
@@ -694,35 +689,23 @@
     "                    decim=10, # to speedup\n",
     "                    verbose=0\n",
     "                    )\n",
-    "\n",
-    "    # save dataarray\n",
-    "    # output_path_plv = Path(f'data/connectivities/PLV/sensor/{subject}_task-{task}_conn-plv_sensor.nc')\n",
+    "    \n",
+    "    # aggregate\n",
     "    conn = conn.mean('times').mean('trials')\n",
-    "    # conn.to_netcdf(output_path_plv)\n",
     "    \n",
-    "    return conn\n",
+    "    clear_output()\n",
     "    \n",
-    "\n",
-    "file_path = sorted(Path('data/clean_data').glob('*.fif'))[10]\n",
-    "conn_512_d10 = calculate_ps(file_path)"
+    "    # save dataarray\n",
+    "    output_path_plv = Path(f'data/connectivities/PLV/sensor/{subject}_task-{task}_conn-plv_sensor.nc')\n",
+    "    conn.to_netcdf(output_path_plv)\n",
+    "    del conn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# open decimated data and compare\n",
     "path1 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d1.nc')\n",
@@ -737,7 +720,7 @@
     "# 1.11.1 min\n",
     "conn_512_d5 = xr.open_dataarray(path2).to_numpy()\n",
     "\n",
-    "# 40.8 min\n",
+    "# 40.8s\n",
     "conn_512_d10 = xr.open_dataarray(path3).to_numpy()\n",
     "\n",
     "# 2:40 min\n",
@@ -746,14 +729,45 @@
     "# 1:17 min\n",
     "conn_1000_d10 = xr.open_dataarray(path5).to_numpy()\n",
     "\n",
-    "abs(np.round(conn_512_d1 - conn_512_d5, 3)).sum()"
+    "# 31.9s\n",
+    "conn_256_d5 = conn_256_d5.to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| Estimating pairwise Phase-Locking Value for trials 0...0 : 1596/1596 [00:49<00:00,   32.38it/s]\n",
+      " 79%|███████▉  | Estimating pairwise Phase-Locking Value for trials 0...0 : 1264/1596 [00:39<00:07,   45.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2K\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| Estimating pairwise Phase-Locking Value for trials 0...0 : 1596/1596 [00:44<00:00,   35.72it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished in 8670.59 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "from joblib import Parallel, delayed\n",
     "from tqdm import tqdm\n",
@@ -761,10 +775,10 @@
     "\n",
     "start_time = time.perf_counter()\n",
     "\n",
+    "# file paths to all the clean eeg data segments except induction segments\n",
+    "file_paths = [i for i in sorted(Path('data/clean_data').glob('*.fif')) if 'induction' not in str(i)]\n",
     "\n",
-    "file_paths = sorted(Path('data/clean_data').glob('*.fif'))[:4]\n",
-    "\n",
-    "conn = Parallel(n_jobs=2)(\n",
+    "conn = Parallel(n_jobs=3)(\n",
     "    delayed(calculate_ps)(file_path) for file_path in file_paths\n",
     ")\n",
     "\n",
