--- a/notebooks/preprocessing/3.3 Phase Synchrony.ipynb
+++ b/notebooks/preprocessing/3.3 Phase Synchrony.ipynb
@@ -615,6 +615,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examine the impact of the decimation on the end value of the aggregated PLVs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open decimated data and compare\n",
+    "path1 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d1.nc')\n",
+    "path2 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d5.nc')\n",
+    "path3 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d10.nc')\n",
+    "path4 = Path(f'data/connectivities/PLV/sensor/tests/conn_1000_d5.nc')\n",
+    "path5 = Path(f'data/connectivities/PLV/sensor/tests/conn_1000_d10.nc')\n",
+    "\n",
+    "# 10 min\n",
+    "conn_512_d1 = xr.open_dataarray(path1).to_numpy()\n",
+    "\n",
+    "# 1.11.1 min\n",
+    "conn_512_d5 = xr.open_dataarray(path2).to_numpy()\n",
+    "\n",
+    "# 40.8s\n",
+    "conn_512_d10 = xr.open_dataarray(path3).to_numpy()\n",
+    "\n",
+    "# 2:40 min\n",
+    "conn_1000_d5 = xr.open_dataarray(path4).to_numpy()\n",
+    "\n",
+    "# 1:17 min\n",
+    "conn_1000_d10 = xr.open_dataarray(path5).to_numpy()\n",
+    "\n",
+    "# 31.9s\n",
+    "conn_256_d5 = conn_256_d5.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define a function for PLV calculation and make it run it in parallel"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -703,38 +749,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# open decimated data and compare\n",
-    "path1 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d1.nc')\n",
-    "path2 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d5.nc')\n",
-    "path3 = Path(f'data/connectivities/PLV/sensor/tests/conn_512_d10.nc')\n",
-    "path4 = Path(f'data/connectivities/PLV/sensor/tests/conn_1000_d5.nc')\n",
-    "path5 = Path(f'data/connectivities/PLV/sensor/tests/conn_1000_d10.nc')\n",
-    "\n",
-    "# 10 min\n",
-    "conn_512_d1 = xr.open_dataarray(path1).to_numpy()\n",
-    "\n",
-    "# 1.11.1 min\n",
-    "conn_512_d5 = xr.open_dataarray(path2).to_numpy()\n",
-    "\n",
-    "# 40.8s\n",
-    "conn_512_d10 = xr.open_dataarray(path3).to_numpy()\n",
-    "\n",
-    "# 2:40 min\n",
-    "conn_1000_d5 = xr.open_dataarray(path4).to_numpy()\n",
-    "\n",
-    "# 1:17 min\n",
-    "conn_1000_d10 = xr.open_dataarray(path5).to_numpy()\n",
-    "\n",
-    "# 31.9s\n",
-    "conn_256_d5 = conn_256_d5.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -784,6 +798,107 @@
     "\n",
     "finish = time.perf_counter()\n",
     "print(f'Finished in {round(finish-start_time, 2)} seconds')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare sensor-level phase synchrony dataset for classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a datframe from the phase synchrony data\n",
+    "# initiate an empty df\n",
+    "conn_df_total = pd.DataFrame()\n",
+    "\n",
+    "# open data\n",
+    "for subject_path in sorted(Path('data/connectivities/PLV/sensor').glob('*.nc')):\n",
+    "  \n",
+    "  subject, task = re.search('(.*)_task-(.*)_conn-plv_sensor.*', subject_path.stem).groups()\n",
+    "    \n",
+    "  conns = xr.open_dataarray(subject_path)\n",
+    "  frequencies = ['delta', 'theta', 'alpha', 'beta', 'gamma']\n",
+    "  \n",
+    "  # create a connectivity dataframe for one subject-task across 5 different frequency bins\n",
+    "  conn_df = pd.DataFrame()\n",
+    "  for i, freq in enumerate(frequencies):\n",
+    "    index = [conns['roi'].values.tolist()[n] + f' ({freq})' for n in range(len(conns['roi']))]\n",
+    "    conn_df_ = pd.DataFrame(conns[:, i],\n",
+    "                            index=index,\n",
+    "                            columns=[0]).T\n",
+    "    conn_df = conn_df.join(conn_df_, how='outer')\n",
+    "\n",
+    "  conn_df_total = pd.concat([conn_df_total, conn_df], axis=0)\n",
+    "\n",
+    "subjects = [f'{i:02}' for i in range(1, 53)]\n",
+    "tasks = [\n",
+    "'baseline1',\n",
+    "'baseline2',\n",
+    "'experience1',\n",
+    "'experience2',\n",
+    "'experience3',\n",
+    "'experience4'\n",
+    "  ]    \n",
+    "# set index\n",
+    "index = []\n",
+    "[index.append(sub + '_' + cond) for sub in subjects for cond in tasks ]\n",
+    "[index.remove(i) for i in ['52_experience2', '52_experience3']]\n",
+    "conn_df_total = conn_df_total.set_axis(index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open behavioral data and ids map\n",
+    "bh = pd.read_csv('data/behavioral_data/archived/plb_hyp_data.csv', index_col='index')\n",
+    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id')\n",
+    "ids_map = ids_map.drop_duplicates('bids_id')\n",
+    "ids_map = ids_map[['bids_id']]\n",
+    "ids_map['bids_id'] = ids_map['bids_id'].apply(lambda x:str(x).zfill(2))\n",
+    "bh = bh.join(ids_map, how='right')\n",
+    "bh = bh.melt(\n",
+    "    id_vars=['procedure_type_1', 'procedure_type_2', 'procedure_type_3', 'procedure_type_4', 'bids_id',\n",
+    "             'description_type_1', 'description_type_2', 'description_type_3', 'description_type_4'],\n",
+    "    value_vars=['hypnosis_depth_1', 'hypnosis_depth_2', 'hypnosis_depth_3', 'hypnosis_depth_4'])\n",
+    "bh['session'] = bh['variable'].apply(lambda x:x.split('_')[2])\n",
+    "bh['procedure'] = bh.apply(lambda r: r['procedure_type_'+r['session']], axis=1)\n",
+    "bh['description'] = bh.apply(lambda r: r['description_type_'+r['session']], axis=1)\n",
+    "bh = bh[['bids_id', 'value', 'procedure', 'description', 'session']].sort_values(by=['bids_id', 'session']).set_index('bids_id')\n",
+    "bh = bh.rename(columns={'value':'hypnosis_depth'})\n",
+    "bh.reset_index(inplace=True)\n",
+    "\n",
+    "# merge connectivity data with behavioral data\n",
+    "conn_df_total[['bids_id', 'condition']] = conn_df_total.index.to_series().apply(lambda x:x.split('_')).apply(pd.Series)\n",
+    "conn_df_total['session'] = conn_df_total['condition'].apply(lambda x:x[-1])\n",
+    "conn_df_total.reset_index(drop=True, inplace=True)\n",
+    "conn_df_total = pd.merge(bh, conn_df_total, how='right', on=['session', 'bids_id'], right_index=False)\n",
+    "conn_df_total = conn_df_total.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
+    "conn_df_total.insert(1, 'condition', conn_df_total.pop('condition'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace procedure, description and hypnosis_depth when condition is baseline\n",
+    "conn_df_total.loc[conn_df_total['condition'] == 'baseline1', ['procedure', 'description']] = 'baseline'\n",
+    "conn_df_total.loc[conn_df_total['condition'] == 'baseline2', ['procedure', 'description']] = 'baseline'\n",
+    "conn_df_total.loc[conn_df_total['condition'] == 'baseline1', ['hypnosis_depth']] = None\n",
+    "conn_df_total.loc[conn_df_total['condition'] == 'baseline2', ['hypnosis_depth']] = None\n",
+    "\n",
+    "# save csv\n",
+    "# conn_df_total.to_csv('data/classification_datasets/plv_sensor.csv', index=0)"
    ]
   }
  ],
